# study

./: README.md
cicd/githubActions/: abst.md
ddd/: ドメイン駆動設計をはじめよう.md
fastapi-demo/: docker-compose.yml  pyproject.toml  readme.md
fastapi-demo/api/cruds/: task.py
fastapi-demo/api/routers/: task.py
ml/knowledge-graph/embedding/: dglke.md  pytorch-biggraph.md  pytorch-geometric.md  ref.md
ml/nlp/nlp_using_scikitlean_tensorflow/: link_colab.md
ml/nlp/pactical-nlp-ja/: 03_text_embedding_to_06.ipynb
ml/nlp/pytorch_advanced/7_nlp_sentiment_transformers/: 7_nlp_sentiment_transformers.ipynb
ml/recommend/recommender-system/chapter5/colab/: data_download.ipynb
ml/unsupervised-learning/: Pythonではじめる教師なし学習.md
nlp_using_scikitlean_tensorflow/: 06_machine_learning.ipynb
search/: ref_url.md
search/QueryUnderstanding/Autocomplete/: spotify.md
search/QueryUnderstanding/RelatedSearchSuggest/: abst.md
search/QueryUnderstanding/SpellingCorrect/: abst.md
